# ffxiv-trading-tools

./: .env.example  .gitignore  Create shortcuts.bat  Delete shortcuts.bat  FIRST_RUN.md  README.md  Uninstall.bat  ffxiv-trader.spec  pyproject.toml  requirements-build.txt  requirements.txt  run-uv.bat  run.bat
.github/workflows/: release.yml
docs/: dashboard-plan.md  easy-startup-plan.md  extra-features-plan.md  plan.md  reliable-trades-plan.md  rest-api.md  trade-signals-plan.md  ws-api.md
scripts/: fetch_collectibles.py  html_to_md.py  reset_data.py
src/app/: desktop.py  main.py
src/app/api/: collectibles.py  dashboard.py  favourites.py  history.py  icons.py  item.py  maps.py  opportunities.py  prefs.py  refresh.py  reliable.py  settings_api.py  tax.py
src/app/clients/: ffxivcollect.py  teamcraft.py  universalis.py  xivapi.py
src/app/core/: cache.py  config.py  db.py  heartbeat.py  http_client.py  rate_limit.py
src/app/models/: favourite.py  history.py  opportunity.py
src/app/services/: collectibles.py  enrichment.py  favourites.py  history.py  (+6 more)
static/: dashboard.html  favourites.html  history.html  index.html  maps.html  minions.html  mounts.html  reliable.html  setup.html  vendor.html
static/components/: taxbar.html  topbar.html
static/css/: app.css
static/js/: alerts.js  app.js  collectibles.js  cols-filters.js  common.js  dashboard-editor.js  dashboard-grid.js  dashboard-widgets.js  dashboard.js  favourites.js  history.js  item-detail.js  maps.js  partials.js  reliable.js  rescan-timer.js  search.js  settings.js  setup.js  tax.js  toast.js
(+7 files in other folders)
