[project]
name = "ffxiv-trader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "lxml>=6.1.0",
    "markdownify>=1.2.2",
    "pillow>=10.0",
    "pydantic-settings>=2.5.0",
    "pystray>=0.19.5",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
